--- a/latihan2/style.css
+++ b/latihan2/style.css
@@ -4,3 +4,11 @@ h1 {
     font-size: 75px;
     color: rgb(86, 235, 227);
 }
+
+p {
+  text-indent: 100px;
+  text-transform: capitalize;
+  word-spacing: 10px;  
+}
+
+a {text-decoration: none;}
