--- a/latihan2/style2.css
+++ b/latihan2/style2.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #2fe31b;
-    background-image: url(gambar/gradient.png);
-    background-repeat: repeat-x;
+    background-color: white;
+    background-image: url(gambar/gradient-y.png);
+    background-repeat: no-repeat;
 }
