--- a/latihan2/style2.css
+++ b/latihan2/style2.css
@@ -1,5 +1,6 @@
 body {
     background-color: white;
-    background-image: url(gambar/gradient-y.png);
+    background-image: url(gambar/tree.png);
     background-repeat: no-repeat;
+    background-position: bottom center;
 }
