--- a/latihan2/style2.css
+++ b/latihan2/style2.css
@@ -1,6 +1,3 @@
 body {
-    background-color: white;
-    background-image: url(gambar/tree.png);
-    background-repeat: no-repeat;
-    background-position: bottom center;
+     background: white url(gambar/tree.png) no-repeat top right;       
 }
