--- a/latihan4/halaman4.css
+++ b/latihan4/halaman4.css
@@ -11,3 +11,15 @@
 .hello:active {
    font-style: italic; 
 }
+
+li:nth-child(even) a {
+    color: green;
+}
+
+li:nth-child(even) a:hover {
+    color: red;
+}
+
+p:first-child {
+    color: red;
+}
